--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,9 +1,22 @@
 {
   "compilerOptions": {
-    "composite": true,
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "allowSyntheticDefaultImports": true
+    "jsx": "react-jsx",
+    "noEmit": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+
+    // for "@/..." imports used across the app
+    "baseUrl": ".",
+    "paths": { "@/*": ["src/*"] },
+
+    // Vite type helpers
+    "types": ["vite/client"]
   },
-  "include": ["vite.config.ts"]
+  "include": ["src", "vite.config.ts", "src/vite-env.d.ts"]
 }
