--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,22 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "composite": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "jsx": "react-jsx",
-    "noEmit": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "allowSyntheticDefaultImports": true,
-
-    // for "@/..." imports used across the app
-    "baseUrl": ".",
-    "paths": { "@/*": ["src/*"] },
-
-    // Vite type helpers
-    "types": ["vite/client"]
+    "types": ["node"]
   },
-  "include": ["src", "vite.config.ts", "src/vite-env.d.ts"]
+  "include": ["vite.config.ts"]
 }
