--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,4 @@
+# .github/workflows/deploy.yml
 name: Deploy to GitHub Pages
 
 on:
@@ -5,7 +6,6 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
-# Required for GitHub Pages
 permissions:
   contents: read
   pages: write
@@ -26,16 +26,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
+          cache: npm
 
-      # handle both lock/no-lock cases
       - name: Install deps
         run: npm ci || npm install
 
       - name: Build
         run: npm run build
 
-      # SPA fallback so refresh on subpaths works
       - name: SPA 404 fallback
         run: cp dist/index.html dist/404.html
 
